deploy/indico-k3s/40indico-back-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indico-celery
  namespace: indico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indico-celery
  template:
    metadata:
      labels:
        app: indico-celery
    spec:
      containers:
      - name: indico-celery
        image: registry.cn-hangzhou.aliyuncs.com/ai4e/indico-worker:3.3.3
        command: ["/opt/indico/run_celery.sh"]
        volumeMounts:
        - mountPath: /opt/indico/archive
          name: archive-volume
      imagePullSecrets:
      - name: ai4ealiyuncs
      volumes:
      - name: archive-volume
        hostPath:
          path: /srv/indico/archive
