deploy/indico-k3s/02indico-back-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indico-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indico-redis
  template:
    metadata:
      labels:
        app: indico-redis
    spec:
      containers:
      - name: indico-redis
        image: redis:alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: indico-redis
spec:
  selector:
    app: indico-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
