deploy/indico-k3s/10indico-back-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indico-postgres
  namespace: indico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indico-postgres
  template:
    metadata:
      labels:
        app: indico-postgres
    spec:
      containers:
      - name: indico-postgres
        image: postgres:16.3
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      volumes:
      - name: postgres-data
        hostPath:
          path: /srv/indico/postgres
          type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: indico-postgres
  namespace: indico
spec:
  selector:
    app: indico-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
