deploy/indico-k3s/20indico-back-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indico-redis
  namespace: indico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indico-redis
  template:
    metadata:
      labels:
        app: indico-redis
    spec:
      containers:
      - name: indico-redis
        image: redis:7.4.0
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        hostPath:
          path: /srv/indico/redis
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: indico-redis
  namespace: indico
spec:
  selector:
    app: indico-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
