deploy/indico-k3s/30indico-back-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indico-web
  namespace: indico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indico-web
  template:
    metadata:
      labels:
        app: indico-web
    spec:
      containers:
      - name: indico-web
        image: registry.cn-hangzhou.aliyuncs.com/ai4e/indico-worker:3.3.3
        command: ["/opt/indico/run_indico.sh"]
        ports:
        - containerPort: 59999
        volumeMounts:
        - mountPath: /opt/indico/archive
          name: archive-volume
        - mountPath: /opt/indico/log
          name: log-volume
        - mountPath: /opt/indico/custom
          name: custom-volume
        - mountPath: /opt/indico/static
          name: static-volume
      imagePullSecrets:
      - name: ai4ealiyuncs
      volumes:
      - name: archive-volume
        hostPath:
          path: /srv/indico/archive
          type: Directory
      - name: log-volume
        hostPath:
          path: /srv/indico/log
          type: Directory
      - name: custom-volume
        hostPath:
          path: /srv/indico/custom
          type: Directory
      - name: static-volume
        hostPath:
          path: /srv/indico/static
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: indico-web
  namespace: indico
spec:
  selector:
    app: indico-web
  ports:
  - protocol: TCP
    port: 59999
    targetPort: 59999
  type: ClusterIP

# ai4ealiyuncs
# kubectl create secret docker-registry ai4ealiyuncs \
#   --docker-server=registry.cn-hangzhou.aliyuncs.com \
#   --docker-username=mingtaoli \
#   --docker-password=<your-password> \
#   --docker-email=mingtao@xjtu.edu.cn \
#   -n indico
