deploy/indico-k3s/60indico-front-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indico-front-nginx
  namespace: indico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: indico-front-nginx
  template:
    metadata:
      labels:
        app: indico-front-nginx
    spec:
      containers:
      - name: indico-front-nginx
        image: nginx:1.27.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /opt/indico/static
          name: static-volume
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      volumes:
      - name: static-volume
        hostPath:
          path: /srv/indico/static
          type: Directory
      - name: nginx-config
        hostPath:
          path: /srv/indico/nginx.conf.d
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: indico-front-nginx
  namespace: indico
spec:
  selector:
    app: indico-front-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
