deploy/indico-k3s/04ingress-indico.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: indico-ai4energy-org-ingress-indico
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
  - host: indico.ai4energy.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
  - hosts:
    - indico.ai4energy.org
    secretName: indico-ai4energy-org-certificate-secret
